# rick_project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  coderabbit.yaml  docker-compose.yaml
.github/: .coderabbit.yaml  CODEOWNERS  dependabot.yaml
.github/workflows/: dependency-scan.yaml  pre-commit.yaml  semgrep.yaml  trufflehog.yaml
k8s/: 10-rules-service.yaml  20-web.yaml  30-ingress.yaml
rules-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
rules-service/data/: MagicCompRules.txt
rules-service/src/rules_service/: __init__.py  main.py  models.py  parser.py
terraform/bootstrap/: main.tf
terraform/ecr/: backend.tf  main.tf
terraform/eks/: .terraform.lock.hcl  alb-controller.tf  backend.tf  main.tf
web/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
web/src/web/: __init__.py  app.py
web/src/web/templates/: index.html
