[project]
name = "web"
version = "0.1.0"
description = "Flask app for MTG rules"
authors = [
    { name = "Demosz", email = "chris@cdcampbell.io" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
